[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/UI/popup_screen.png" type="Texture" id=1]
[ext_resource path="res://assets/towers/farm/farm_simple.png" type="Texture" id=2]
[ext_resource path="res://ui/tower_info_popup.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/foodfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/UI/Coin.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/grain_icon.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 13
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 4 )

[node name="PopupPanel" type="TextureRect"]
anchor_right = 0.3
anchor_bottom = 0.217
margin_right = -20.0
margin_bottom = -0.200012
mouse_default_cursor_shape = 3
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 50.0
texture_normal = ExtResource( 2 )

[node name="NameLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 10.0
margin_right = 122.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Farm"
align = 1
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 90.0
margin_top = 50.0
margin_right = 261.0
margin_bottom = 179.0
custom_fonts/normal_font = SubResource( 2 )
text = "A nice little farm.

Occasionally produces wheat"

[node name="FoodCost" type="Label" parent="."]
margin_left = 50.0
margin_top = 56.8865
margin_right = 80.0
margin_bottom = 70.8865
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 4
custom_fonts/font = ExtResource( 5 )
text = "10"

[node name="GoldCost" type="Label" parent="."]
margin_left = 50.0
margin_top = 76.8865
margin_right = 90.0
margin_bottom = 90.8865
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 4
custom_fonts/font = ExtResource( 5 )
text = "10"

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 20.2394
margin_top = 52.1274
margin_right = 60.2394
margin_bottom = 92.1274
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 19.4457
margin_top = 73.5574
margin_right = 59.4457
margin_bottom = 113.557
texture = ExtResource( 6 )
